highcontrast: fix evolution column-header selectors

--- a/themes/a11y-base.css
+++ b/themes/a11y-base.css
@@ -477,7 +477,8 @@ GtkScrolledWindow.frame {
     border-style: solid;
 }
 
-column-header .button {
+column-header .button,
+column-header.button {
     font: bold;
 
     border-top-width: 0;
